--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   dartz: ^0.10.0
-  sprintf: ^6.0.0
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_lints: 1.0.4
